Adding filter for aggregated call
